compiler/tests/fixtures/invalid/semantics/join_without_parent.viv
// Invalid: action uses join without parent

action orphan-join:
    roles:
        @actor:
            as: initiator
    join effects:
        @actor.mood += 1
